# PyEDCR

./: .gitignore  COX.py  EDA.ipynb  EDCR_binary_classifier.py  EDCR_pipeline.py  ImageNet100.ipynb  ImageNetPyEDCR.py  ImageNet_fine_tuning.py  LICENSE  LTN_Combine_Results.xlsx  LTN_EDCR_For_paper.py  LTN_error_detection_rule_learn_old.py  LTN_error_detetection_rule_learn.py  LTN_with_dynamic (1).py  Ltn_complete.ipynb  NeuralPyEDCR.py  OODPyEDCR.py  OpenimagePyEDCR.py  PyEDCR.py  README.md  SymbolicPyEDCR.py  backbone_pipeline.py  binary_fine_tuning.py  binary_predictions.py  combined_fine_tuning.py  combined_metrics.ipynb  condition.py  conditions.py  config.py  context.py  context_handlers.py  corr_rule_learn_all_class.py  corr_rule_learn_new.py  data_loading.py  data_preprocessing.py  data_preprocessor.py  datasets.py  distplot  distplot.py  error_fine_tuning.py  (+60 more)
COX/: COX_EDA.ipynb  COX_EDCR.py  EDA.ipynb  NN.py  RandomForest.py
LRCN_F1_no_overlap_sequential/: rule_for_NPcorrection.csv
LTN/: LTN_error_detection_rule_learn_old.py  LTN_error_detetection_rule_learn.py  ltn_manual.py  ltn_support.py
binary_results/: imagenet_dinov2_vits14_test_pred_BCE_lr0.0001_e0_Komodo dragon, Komodo lizard, dragon lizard, giant lizard, Varanus komodoensis.npy  imagenet_dinov2_vits14_test_pred_BCE_lr0.0001_e0_common iguana, iguana, Iguana iguana.npy  imagenet_dinov2_vits14_test_pred_BCE_lr0.0001_e0_garden spider, Aranea diademata.npy  imagenet_dinov2_vits14_test_pred_BCE_lr0.0001_e0_hammerhead, hammerhead shark.npy  imagenet_dinov2_vits14_test_pred_BCE_lr0.0001_e0_indigo bunting, indigo finch, indigo bird, Passerina cyanea.npy  (+271 more)
data/: WEO_Data_Sheet.xlsx
(+2144 files in other folders)
