[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyedcr"
version = "1.1.0"
description = "A metacognitive error detection and correction framework"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Lab V2", email = "pshak02@asu.edu" }
]
keywords = ["machine learning", "error detection", "metacognition"]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0"
]

# Specify where your source code is located
[tool.hatch.build.targets.wheel]
packages = ["src/pyedcr"]  # Replace with the actual path to your package

